# MiniRedis

./: .gitignore  CMakeLists.txt  README.md
client/: client.cpp
include/: command_handler.h  database.h  hashtable.h  parser.h  server.h
src/: command_handler.cpp  database.cpp  main.cpp  parser.cpp  server.cpp
tests/: test_hashtable.cpp
